<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:padding="6dp"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:src="@android:drawable/ic_menu_delete"
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/delete"/>

    <ImageView
        android:src="@android:drawable/ic_menu_edit"
        android:id="@+id/rename_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/delete_button"
        android:contentDescription="@string/rename"
        />

</RelativeLayout>
